nearly complete rewrite + custom icon support